# EventWinnower

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/processors/: aftern.rs  anomaly.rs  apply.rs  arrayjoiner.rs  athena.rs  aws.rs  bedrock.rs  classify.rs  core.rs  csv.rs  defanger.rs  diff.rs  exec.rs  filter.rs  firehose.rs  firstn.rs  flatten.rs  generate.rs  groupevents.rs  histogram.rs  jmesproc.rs  join.rs  keycorrelate.rs  keycount.rs  keycounttotal.rs  keygen.rs  keypercentile.rs  kinesis.rs  kvmap.rs  mod.rs  numfilter.rs  pivot.rs  processor.rs  rank.rs  regexextractor.rs  regexmatcher.rs  s3.rs  s3buffer.rs  sample.rs  sns.rs  (+11 more)
src/processors/dynamodb/: common.rs  dedup.rs  mod.rs  put.rs  query.rs
src/workflow/: dot.rs  env_preprocess.rs  graph.rs  mod.rs  parse.rs  serial.rs  shutdown.rs  threaded.rs  threadpool.rs  trigger.rs
